sil-transcriber (2.15.8.1)  experimental; urgency=high

* TT-4035b fix removing extra hyphens on language tags
* TT-4028 Cancelling resource creation
* TT-4030c Chunk paste edge cases
* TT-3844 scrolling windows and wording changes

-- Greg Trihus <greg_trihus@sil.org>  Mon, 25 Jun 2022 17:34:00 -0600

sil-transcriber (2.15.7.0)  experimental; urgency=high

* fix local Paratext sync - code does not end in dash

-- Greg Trihus <greg_trihus@sil.org>  Mon, 24 Jun 2022 08:33:00 -0600

sil-transcriber (2.15.6.0)  experimental; urgency=high

* fix local Paratext sync with complicated language code

-- Greg Trihus <greg_trihus@sil.org>  Mon, 23 Jun 2022 11:13:00 -0600

sil-transcriber (2.15.5.4)  experimental; urgency=high

* TT-3895 Allow playing resources multiple times
* TT-3957 Allow working through all passages of a section
* TT-3958 All discussions to be visible on the record step
* TT-3959 Discussion scroll bar
* TT-3960 don't play two audio (no player on record)
* TT-3963 display unsaved dialog on slider navigation
* TT-3966 hot keys control recorder (no player on record)
* TT-3968 fix player count, show reference, step complete advances
* TT-3974 No fast complete action
* TT-3975 Clear content if user refuses save
* TT-3976 Complete Unsaved Recording save without error
* update help

-- Greg Trihus <greg_trihus@sil.org>  Mon, 18 May 2022 11:54:00 -0600

sil-transcriber (2.15.4.0)  experimental; urgency=high

* export audio available online too
* revert upgrade api to use EC2 for production

-- Greg Trihus <greg_trihus@sil.org>  Mon, 23 Apr 2022 21:40:00 -0600

sil-transcriber (2.15.3.0)  experimental; urgency=high

* export audio only available offline
* revert upgrade api to use dotnet 3.1 and latest lambda

-- Greg Trihus <greg_trihus@sil.org>  Mon, 23 Apr 2022 21:40:00 -0600

sil-transcriber (2.15.2.0)  experimental; urgency=high

  * upgrade api to use dotnet 3.1 and latest lambda

-- Greg Trihus <greg_trihus@sil.org>  Mon, 21 Apr 2022 12:19:00 -0600
